--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,10 +1,7 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/gemimnhr/accounts.gemifx.com/
+    - export DEPLOYPATH=/home/keynesac/cetank.net/
     - /bin/cp -R * $DEPLOYPATH
   script:
-    - composer require laravel/ui  
-    - php artisan ui bootstrap --auth  
-    - npm install
-    - npm run dev
+
