--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^7.29",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "2.4"
+        "laravel/ui": "2.4",
+        "qoraiche/laravel-mail-editor": "^3.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
